// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegacySelectableTextTest DoubleClickWhenNotSelectable 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressed-state",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Pressed: 3 times.",
    "TextRangePattern.GetText": "Pressed: 3 times.",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "pressed-state",
    },
  },
  "Visual Tree": {
    "Comment": "pressed-state",
    "Offset": "0, 0, 0",
    "Size": "154, 27.999996",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`LegacySelectableTextTest DoubleClickWhenSelectable 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressed-state",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Pressed: 6 times.",
    "TextRangePattern.GetText": "Pressed: 6 times.",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "pressed-state",
    },
  },
  "Visual Tree": {
    "Comment": "pressed-state",
    "Offset": "0, 0, 0",
    "Size": "154, 27.999996",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`LegacySelectableTextTest PressableWhenNotSelectable 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressed-state",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Pressed: 1 times.",
    "TextRangePattern.GetText": "Pressed: 1 times.",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "pressed-state",
    },
  },
  "Visual Tree": {
    "Comment": "pressed-state",
    "Offset": "0, 0, 0",
    "Size": "154, 27.999996",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`LegacySelectableTextTest PressableWhenSelectable 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressed-state",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Pressed: 4 times.",
    "TextRangePattern.GetText": "Pressed: 4 times.",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "pressed-state",
    },
  },
  "Visual Tree": {
    "Comment": "pressed-state",
    "Offset": "0, 0, 0",
    "Size": "154, 27.999996",
    "Visual Type": "SpriteVisual",
  },
}
`;
